<resources>
    <string name="app_name">عربیگرام(استاد)</string>

    <string name="input">پیام به دانش آموز</string>
    <string name="input_hint">متن پیام را وارد کنید</string>
    <string name="input_prefill"></string>
    <string name="InputCallback">کلاس عقب</string>

    <string name="str_et_className">نام کلاس</string>
    <string name="str_et_classSubject">موضوع کلاس</string>
    <string name="str_btn_classSubject">ساختن</string>

    <string name="str_seeAllStudent_main">مشاهده تمام دانش آموزان</string>
    <string name="str_searchClass_main">جستجو کلاس</string>
    <string name="str_attachFile_main">جزوه ارسالی</string>

    <string name="title_class">نام کلاس :</string>
    <string name="tv_start_onlineClass">تعداد دانش آموزان:</string>
    <string name="tv_time_onlineClass">موضوع کلاس :</string>
    <string name="tv_enterClass_onlineClass">ورود به کلاس</string>
    <string name="tv_ostadname_onlineClass">نام استاد:</string>


    <string name="tv_row_allSt">ردیف</string>
    <string name="tv_name_allSt">نام خانوادگی</string>
    <string name="tv_username_allSt">نام کاربری</string>
    <string name="tv_finish_allSt">وضعیت</string>


    <string name="btn_login">ورود به برنامه</string>
    <string name="btn_guest">ورود مهمان</string>
    <string name="btn_regester">ثبت نام</string>
    <string name="txt_login">ورود به برنامه</string>
    <string name="txt_register">ثبت نام</string>

    <string name="fotgot_pass">رمز عبور را فراموش کردم</string>
    <string name="already_registered">قبلا ثبت نام کردم</string>
    <string name="notRegistered">هنوز ثبت نام نکردم</string>
    <string name="pro_search">جستجوی پیشرفته</string>
    <string name="username">نام کاربری</string>
    <string name="password">رمز عبور</string>
    <string name="reg_name">نام</string>
    <string name="reg_lastnamme">نام خانوادگی</string>
    <string name="reg_email">پست الکترونیکی</string>
    <string name="reg_confirmPass">تکراررمزعبور</string>
    <string name="btn_register_main">ثبت نام</string>


</resources>
