<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="5dp">




        <LinearLayout
            android:layout_margin="15dp"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:gravity="center">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="ساخت کلاس جدید"
                android:textColor="@color/material_green_900"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>



        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:theme="@style/MyEditText">

            <EditText
                android:id="@+id/et_className"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:ems="15"
                android:layout_margin="10dp"
                android:gravity="right"
                android:hint="@string/str_et_className"
                android:inputType="text" />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:theme="@style/MyEditText">

            <EditText
                android:id="@+id/et_classSubject"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:ems="15"
                android:layout_margin="10dp"
                android:gravity="right"
                android:hint="@string/str_et_classSubject" />

        </android.support.design.widget.TextInputLayout>


        <Button
            android:id="@+id/btn_createClass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="15dp"
            android:layout_marginTop="10dp"
            android:background="@color/material_teal_900"
            android:padding="10dp"
            android:text="@string/str_btn_classSubject"
            android:textColor="@android:color/white"
            android:textSize="15dp" />

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>