<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_detail_discount"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.arabic_app_teacher.Activity.AllStudentActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">



        <android.support.v7.widget.Toolbar
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:background="@color/material_green_800"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="55dp"
                android:gravity="center_vertical"
                android:layout_marginRight="8dp"
                android:layout_marginLeft="8dp">




                <TextView
                    android:id="@+id/name"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_centerHorizontal="true"
                    android:gravity="center"
                    android:text="@string/app_name"
                    android:textSize="20dp"
                    android:textColor="@android:color/white" />


                  <ImageView
                      android:id="@+id/img_student_refresh"
                      android:layout_width="40dp"
                      android:padding="3dp"
                      android:layout_height="match_parent"
                      android:layout_alignParentRight="true"
                      android:layout_alignParentTop="true"
                      android:clickable="true"
                      android:src="@drawable/ic_refresh" />



            </RelativeLayout>


        </android.support.v7.widget.Toolbar>


        <!-- title header -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/gray_dark"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical|center_horizontal"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/textView2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:gravity="center"
                android:padding="12dp"
                android:paddingBottom="5dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingTop="5dp"
                android:text="وضعیت"
                android:textColor="@color/white"
                android:textDirection="rtl"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:gravity="center"
                android:padding="12dp"
                android:paddingBottom="5dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingTop="5dp"
                android:text="@string/tv_username_allSt"
                android:textColor="@color/white"
                android:textDirection="rtl"
                android:textSize="12sp"
                android:textStyle="bold" />


            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:gravity="center"
                android:padding="12dp"
                android:paddingBottom="5dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingTop="5dp"
                android:text="@string/tv_name_allSt"
                android:textColor="@color/white"
                android:textDirection="rtl"
                android:textSize="12sp"
                android:textStyle="bold" />


            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:gravity="center"
                android:padding="12dp"
                android:paddingBottom="5dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingTop="5dp"
                android:text="@string/tv_row_allSt"
                android:textColor="@color/white"
                android:textDirection="rtl"
                android:textSize="12sp"
                android:textStyle="bold" />


        </LinearLayout>


        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerview_calculator"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />


    </LinearLayout>







</RelativeLayout>