<?xml version="1.0"?>


<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:cardview="http://schemas.android.com/apk/res-auto"
    android:id="@+id/click_discount_cardview"
    android:layout_width="match_parent"
    android:layout_height="320dp"
    android:layout_marginBottom="12dp"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginTop="12dp"
    android:background="@drawable/ripple"
    cardview:cardElevation="3dp">


    <LinearLayout
        android:id="@+id/click_linear_discount"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/ripple"
        android:orientation="vertical">


        <!-- Image Top -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img_discount"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                cardview:srcCompat="@drawable/loading" />

        </LinearLayout>


        <!-- Details Bottom -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.2"
            android:orientation="vertical">


            <!-- Title Class -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_class_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical|center_horizontal"
                    android:text="@string/title_class"
                    android:textColor="#555555"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </LinearLayout>


            <!-- Time Start Class -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#f7f7f7"
                android:orientation="horizontal">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:elevation="1dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_class_subject"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:layout_marginRight="15dp"
                        android:paddingRight="10dp"
                        android:text="@string/tv_time_onlineClass"
                        android:textColor="@color/material_green_900"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/tv_class_ostad"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:layout_marginLeft="15dp"
                        android:paddingRight="10dp"
                        android:text="@string/tv_ostadname_onlineClass"
                        android:textColor="@color/material_green_900"
                        android:textSize="16sp" />

                </LinearLayout>


            </LinearLayout>


            <!-- Button in Class -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:elevation="1dp"
                android:orientation="horizontal">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="100dp"
                    android:layout_marginRight="100dp"
                    android:layout_marginTop="8dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/btn_enter_class"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:background="@drawable/ripple_button_discount"
                        android:text="@string/tv_enterClass_onlineClass"
                        android:textColor="#fff"
                        android:textSize="12sp" />


                </LinearLayout>


            </LinearLayout>


        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>